--- a/src/sass/post-types/case-study.scss
+++ b/src/sass/post-types/case-study.scss
@@ -291,7 +291,6 @@
             grid-column: 1 / 7;
             grid-row: 1;
             font-family: var(--titling);
-            font-size: var(--font-medium);
         }
 
         .title {
@@ -299,12 +298,11 @@
             margin-bottom: var(--drop-medium);
         }
 
-        .text {
+        .text-container {
             grid-column: 8 / -1;
 
             p {
                 margin-bottom: var(--drop-medium);
-                font-size: var(--font-base-plus);
             }
 
             strong {
@@ -322,6 +320,7 @@
             gap: var(--gutter-large);
 
             @media (min-width: 880px) {
+                margin-top: 1.75rem;
                 grid-template-columns: auto 1fr;
             }
 
@@ -441,7 +440,7 @@
 
         .text {
             font-family: var(--titling);
-            font-size: var(--font-medium);
+            font-size: clamp(2rem, 1.7rem + 1.5vw, 2.75rem);
 
             @media (min-width: 800px) {
                 grid-column: 5 / 12;
