--- a/src/sass/type/_typography.scss
+++ b/src/sass/type/_typography.scss
@@ -42,7 +42,8 @@ h4,
 
 p,
 span,
-li {
+li,
+small {
     // clamp active between 320 - 120px
     font-family: var(--copy);
     font-size: clamp(1.125rem, 1.075rem + 0.25vw, 1.25rem);
