--- a/src/sass/flx/_what-we-do.scss
+++ b/src/sass/flx/_what-we-do.scss
@@ -273,8 +273,18 @@
 
     // text-image styles ----------------------------------------------------
     .text-image {
-        padding-top: 2.25rem;
+        //padding-top: 2.25rem;
         margin-bottom: 6rem;
+
+        .contain-inner {
+            padding-top: 36px;
+            border-top: 1.5px solid var(--black);
+
+            grid-column: 3 / 11;
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            column-gap: var(--gutter-large);
+        }
 
         .text {
             line-height: normal;
@@ -295,6 +305,8 @@
 
             p:first-of-type {
                 font-family: var(--copy-med);
+                font-weight: 500;
+                color: var(--black);
             }
 
             p:last-of-type {
@@ -313,43 +325,43 @@
     }
 
     // layout media queries --------------------------------------------------
-    @media (min-width: 880px) {
-        .text-image {
-            .left {
-                .text {
-                    grid-column: 1 / 7;
-                    grid-row: 1 / 2;
-                }
+    // @media (min-width: 880px) {
+    //     .text-image {
+    //          .left {
+    //             .text {
+    //                 grid-column: 1 / 4;
+    //                 grid-row: 1 / 2;
+    //             }
 
-                .image {
-                    grid-column: 8 / -1;
-                    grid-row: 1 / 2;
-                }
-            }
+    //             .image {
+    //                 grid-column: 8 / -1;
+    //                 grid-row: 1 / 2;
+    //             }
+    //         }
 
-            .right {
-                .text {
-                    grid-column: 8 / -1;
-                    grid-row: 1 / 2;
-                }
+    //         .right {
+    //             .text {
+    //                 grid-column: 5 / -1;
+    //                 grid-row: 1 / 2;
+    //             }
 
-                .image {
-                    grid-column: 1 / 7;
-                    grid-row: 1 / 2;
-                }
-            }
-        }
-    }
+    //             .image {
+    //                 grid-column: 1 / 7;
+    //                 grid-row: 1 / 2;
+    //             }
+    //         }
+    //     }
+    // }
 
     @media (min-width: 1120px) {
         .left {
             .text {
-                grid-column: 3 / 8;
+                grid-column: 1 / 6;
                 grid-row: 1 / 2;
             }
 
             .image {
-                grid-column: 8 / 12;
+                grid-column: 6 / -1;
                 grid-row: 1 / 2;
             }
         }
