Work: Filters toggle re-instated

--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -18,7 +18,7 @@ our-work__archive
             margin-top: 2rem;
             grid-column: 1;
 
-            display: block;
+            display: none;
 
             &.show-filter {
                 display: block;
